# jprefix

./: .gitignore  .travis.yml  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  README.md  autogen.sh  bootstrap  cleanup.sh  configure.ac  configure.in  jpdateutils.cc  jpdateutils.h  jpopts.cc  jprefix.cc  jprefix.cpp  jprefix.h  test-jprefix.pl
dev/: cleanup.sh
src/: Makefile.am  getopt_long_example.c  jpdateutils.cc  jpdateutils.h  jpopts.cc  jpopts.h  jposutils.cc  jposutils.h  jprefix.cc  jprefix.h  jpstrutils.cc  jpstrutils.h
test/: test-file.txt  test-jprefix.pl
